fix button and salad alignment

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ p {
 }
 
 .salate {
-  padding: 0 5%;
+  padding: 0 3%;
 }
 
 /* Impressum */
